<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">优家服</string>
    <string name="error_happen_current">发生错误</string>
    <string name="login_out_time">登录失效，请重新登陆</string>
    <string name="login_title_desc">登录</string>
    <string name="login_button_desc">登  录</string>
    <string name="login_get_code_desc">获取验证码</string>
    <string name="login_agreement_hint_desc">点击登录，即表示您同意</string>
    <string name="login_agreement_desc">《用户协议》</string>
    <string name="login_input_phone_hint">请输入您的电话号码</string>
    <string name="login_input_phone_code_hint">请输入验证码</string>
    <string name="phone_number_error_format_desc">手机号格式错误</string>
    <string name="phone_code_empty_error_desc">请输入短信验证码</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="login_failure">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="success">Success</string>
    <string name="main_bottom_menu_home_desc">首页</string>
    <string name="main_bottom_menu_circle_desc">圈子</string>
    <string name="main_bottom_menu_news_desc">消息</string>
    <string name="main_bottom_menu_mine_desc">我的</string>
    <string name="home_banner_top_house_keeping">家政</string>
    <string name="home_banner_top_family">居家</string>
    <string name="home_banner_top_life">生活</string>
    <string name="home_banner_top_refer">咨询</string>
    <string name="home_banner_top_all">全部</string>
    <string name="home_hot_service_desc">热门服务</string>
    <string name="home_moon_woman_service">月嫂服务</string>
    <string name="home_shops_recommend_desc">门店推荐</string>
    <string name="home_officer_recommend_desc">阿姨推荐</string>
    <string name="home_carer_service">护工</string>
    <string name="home_carer_work_year">工龄</string>
    <string name="home_carer_gender">评分</string>
    <string name="home_higher_house_people_select">高级家政人员首选</string>
    <string name="home_higher_house_people">高级家政人员</string>
    <string name="home_higher_house_keeping_desc">高级家政</string>
    <string name="home_shops_recommend_more_desc">查看更多</string>
    <string name="home_shops_comment_load_more">查看更多</string>
    <string name="home_user_comment">用户评价</string>
    <string name="home_staff_power_tags">技能标签</string>
    <string name="home_staff_service_price">服务价格</string>
    <string name="home_staff_price">价格</string>
    <string name="home_format_grade">%.0f 分</string>
    <string name="home_format_order_grade">%s 分</string>
    <string name="home_format_grade_comment">%d.0 分</string>
    <string name="home_format_staff_message">%s年经验 | %d岁 | %s</string>
    <string name="home_format_order_detail_message">%d年经验 | %d岁 | %s</string>
    <string name="home_format_staff_price">¥ %s</string>
    <string name="home_format_staff_order_number">%d成交量</string>
    <string name="home_format_staff_number">成交量</string>
    <string name="home_format_staff_info_gender">雇主评分%d</string>
    <string name="home_format_staff_info_work_time">%s年</string>
    <string name="person_info_service_price_format">¥%d/%s</string>
    <string name="person_page_card_hint"><Data><![CDATA[<font color="#999999">%s  发布于</font><font color="#FE714B">  #%s#</font>]]></Data></string>
    <string name="person_page_card_topic_hint"><Data><![CDATA[<font color="#999999">来自主题贴  </font><font color="#222222">" %s "</font>]]></Data></string>
    <string name="appointment_submit_order_btn">提交订单</string>
    <string name="appointment_success">预约成功</string>
    <string name="appointment_desc">预约</string>
    <string name="appointment_right_now">立即预约</string>
    <string name="appointment_failure">预约失败</string>
    <string name="appointment_return_home">返回首页</string>
    <string name="appointment_choice_again">重新选择</string>
    <string name="appointment_choice">选择</string>
    <string name="appointment_nurse_years">护理经验</string>
    <string name="appointment_staff_info_detail">个人信息</string>
    <string name="appointment_staff_work_info_detail">工作信息</string>
    <string name="appointment_staff_info_aptitudes_detail">资质信息</string>
    <string name="appointment_demand_input">需求填写</string>
    <string name="appointment_demand_other">其他需求</string>
    <string name="appointment_demand_days_hint">请填写服务时长</string>
    <string name="appointment_demand_address_hint">请添加地址</string>
    <string name="appointment_select_service_time">选择服务时间</string>
    <string name="appointment_demand_days">预计\t\t（天）</string>
    <string name="appointment_demand_days_mouth">预计（月）</string>
    <string name="appointment_demand_days_times">预计（次）</string>
    <string name="appointment_demand_remark_hint">有什么其他特殊需求，可以在这里曰出来…</string>
    <string name="appointment_demand_times_hint">预计服务时间</string>
    <string name="appointment_choice_again_hint">根据需求重新匹配阿姨</string>
    <string name="appointment_failure_hint">稍后将有工作人员与您联系，请保持电话畅通。</string>
    <string name="interview_time_wait_sure">待确定</string>
    <string name="store_look_detail_desc">查看详情</string>
    <string name="store_collect_desc">收藏</string>
    <string name="store_collect_had_desc">已收藏</string>
    <string name="store_title">门店</string>
    <string name="store_detail_title">门店详情</string>
    <string name="store_business_qualification">营业资质</string>
    <string name="house_keeping_title_str">家政服务</string>
    <string name="house_keeping_nursing_subtitle">护工服务</string>
    <string name="house_keeping_nursery_subtitle">育婴师</string>
    <string name="house_keeping_prolactin_division_subtitle">催乳师</string>
    <string name="mine_issue_number">发布</string>
    <string name="mine_reply_number">回复</string>
    <string name="mine_fans_number">粉丝</string>
    <string name="mine_attention_number">关注</string>
    <string name="mine_order_contracting">签约中</string>
    <string name="mine_order_servicing">服务中</string>
    <string name="mine_order_finished">已完结</string>
    <string name="mine_order_service">服务订单</string>
    <string name="mine_order_all">全部</string>
    <string name="mine_address">我的地址</string>
    <string name="mine_custom_service">联系客服</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_setting">设置</string>
    <string name="mine_click_edit_nick_name">点击编辑昵称</string>
    <string name="mine_nick_name">昵称</string>
    <string name="mine_save_address">保存地址</string>
    <string name="mine_add_address">＋ 新增地址</string>
    <string name="mine_person_gender">性别</string>
    <string name="mine_person_man">男</string>
    <string name="mine_person_woman">女</string>
    <string name="mine_person_sign">签名</string>
    <string name="mine_person_birthday">生日</string>
    <string name="mine_person_phone">电话</string>
    <string name="mine_address_edit_success">编辑成功</string>
    <string name="mine_address_delete_success">删除成功</string>
    <string name="service_order_title">服务订单</string>
    <string name="service_order_detail_title">订单详情</string>
    <string name="service_order_number">订单编号</string>
    <string name="service_order_comment_right_now">立即评价</string>
    <string name="service_order_comment_cancel_order">取消订单</string>
    <string name="subordinate_the_stores">所属门店</string>
    <string name="stores_comment">门店评价：  %s</string>
    <string name="order_stores_phone">门店电话</string>
    <string name="order_stores_wait">待服务</string>
    <string name="order_stores_serving">服务中</string>
    <string name="order_stores_finish">已完结</string>
    <string name="order_stores_all">全部</string>
    <string name="order_detail_interview_time">面试时间</string>
    <string name="order_detail_interview">面试</string>
    <string name="order_detail_service_project">服务项目</string>
    <string name="order_detail_service_days">服务天数</string>
    <string name="order_detail_create_time">下单时间</string>
    <string name="order_detail_pay">签约付款</string>
    <string name="order_detail_serving">服务中</string>
    <string name="order_detail_service_detail">服务地址</string>
    <string name="order_detail_service_remark">备注</string>
    <string name="order_detail_service_price">服务费</string>
    <string name="order_professional_kill">专业技能</string>
    <string name="order_service_attitude">服务态度</string>
    <string name="order_power_of_chat">沟通能力</string>
    <string name="order_professional_ethics">职业道德</string>
    <string name="order_evaluate_submit">提交</string>
    <string name="order_evaluate_wait">待派单</string>
    <string name="order_evaluate_interview">面试中</string>
    <string name="order_evaluate_contract">签约中</string>
    <string name="order_evaluate_serving">服务中</string>
    <string name="order_evaluate_finish">已完成</string>
    <string name="order_evaluate_cancel">已取消</string>
    <string name="edit_mine_address">编辑地址</string>
    <string name="mine_address_title">我的地址</string>
    <string name="edit_mine_address_name">姓名</string>
    <string name="edit_mine_address_phone">手机号</string>
    <string name="edit_mine_address_num">详细地址</string>
    <string name="edit_mine_address_detail">服务地址</string>
    <string name="edit_mine_address_name_hint">请输入姓名</string>
    <string name="edit_mine_address_phone_hint">请输入手机号</string>
    <string name="edit_mine_address_detail_hint">请输入详细地址</string>
    <string name="mine_person_page_title">我的主页</string>
    <string name="mine_collection_title">收藏</string>
    <string name="setting_title">设置</string>
    <string name="setting_clear_cache">清理缓存</string>
    <string name="setting_not_need_clear_cache">无需清理</string>
    <string name="setting_clearing_cache">正在清理缓存</string>
    <string name="setting_submitting">正在提交</string>
    <string name="setting_clearing_cache_success">清理完成</string>
    <string name="setting_update_info_success">编辑成功</string>
    <string name="setting_update_info_failure">编辑失败</string>
    <string name="setting_login_out">退出登录</string>
    <string name="setting_about_company">关于我们</string>
    <string name="social_circle_title">圈子</string>
    <string name="social_circle_attention">关注</string>
    <string name="social_circle_attention_str">＋ 关注</string>
    <string name="social_circle_attention_success">关注成功</string>
    <string name="social_circle_cancel_attention">取消关注</string>
    <string name="social_circle_cancel_attention_hint">已取消</string>
    <string name="social_circle_attention_hint">已关注</string>
    <string name="social_circle_theme_card">主题帖</string>
    <string name="social_circle_dynamic_state">圈子动态</string>
    <string name="social_circle_hot_state">热</string>
    <string name="social_circle_all_comment">全部评论</string>
    <string name="order_detail_comment_content">评论内容</string>
    <string name="social_circle_post_card_title">标题</string>
    <string name="social_circle_post_card_title_hint">输入你要发布帖子的名称</string>
    <string name="social_circle_post_card_content">描述帖子的内容，想表达的想法</string>
    <string name="social_circle_topic_type">分类</string>
    <string name="social_circle_post_topic">发帖</string>
    <string name="social_circle_post_action">发布</string>
    <string name="social_circle_reply_comment_hint">觉得不错说两句～</string>
    <string name="social_circle_replay_comment_send">发送</string>
    <string name="social_circle_person_page_title">TA的主页</string>
    <string name="social_circle_mine_page">我的主页</string>
    <string name="mine_add_address_hint">请添加地址</string>
    <string name="no_address_user_hint">暂无可用地址</string>
    <string name="social_circle_comment_hint">评论</string>
    <string name="post_card_input_title_hint">请输入标题</string>
    <string name="post_card_input_content_hint">请输入内容</string>
    <string name="post_card_choose_type_hint">请选择帖子分类</string>
    <string name="mine_address_info">%s\t\t\t\t\t\t%s</string>
    <string name="social_post_card_success">发布成功</string>
    <string name="social_card_no_comment">暂无评论</string>
    <string name="card_comment_floor">%d 楼</string>
    <string name="mine_address_choice_area">城市选择</string>
    <string name="home_service_no_open_hint">服务暂未开通</string>
</resources>