<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_5"
    android:background="@color/write_color"
    android:orientation="vertical"
    android:paddingLeft="@dimen/base_horizontal_left_margin"
    android:paddingTop="@dimen/dp_20"
    android:paddingRight="@dimen/base_horizontal_right_margin"
    android:paddingBottom="@dimen/dp_25">


    <TextView
        android:id="@+id/tv_user_nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/mine_order_service"
        android:textColor="@color/common_text_dark_color"
        android:textSize="@dimen/sp_15"
        app:layout_constraintLeft_toRightOf="@+id/qiv_user_profile_photo"
        app:layout_constraintTop_toTopOf="@+id/qiv_user_profile_photo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qiv_user_profile_photo">

        <TextView
            android:id="@+id/tv_mine_order_servicing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_mine_order_contacting"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/mine_order_contracting"
            android:textColor="@color/common_text_dark_color"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_mine_order_servicing"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/mine_order_servicing"
            android:textColor="@color/common_text_dark_color"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_mine_order_finished"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/mine_order_finished"
            android:textColor="@color/common_text_dark_color"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_mine_order_all"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/mine_order_all"
            android:textColor="@color/common_text_dark_color"/>
    </LinearLayout>

</LinearLayout>