<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/write_color"
    android:orientation="vertical"
    android:padding="@dimen/dp_30">


    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/login_title_desc"
        android:textColor="@color/common_text_dark_color"
        android:textSize="@dimen/sp_36"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_phone_number"
        style="@style/LoginInputEditLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_55"
        android:hint="@string/login_input_phone_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/LoginInputEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_15"
            android:textSize="@dimen/sp_16"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_phone_code_number"
        style="@style/LoginInputEditLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:hint="@string/login_input_phone_code_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_15"
            android:textSize="@dimen/sp_16"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/qbtn_login"
        style="@style/QDRoundButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_90"
        android:text="@string/login_button_desc"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_phone_code_number"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_login_agreement_hint_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/login_agreement_hint_desc"
            android:textSize="@dimen/sp_13"/>

        <TextView
            android:id="@+id/tv_login_agreement_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="bottom"
            android:text="@string/login_agreement_desc"
            android:textColor="@color/color_common_theme_text"
            android:textSize="@dimen/sp_13"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>